[package]
name = "poetry-site"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }

askama = "0.12"
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono"] }
argon2 = "0.5"
chrono = "0.4"

tower-cookies = "0.10"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }